[package]
name = "hypr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
chrono = "0.4.19"
futures = "0.3"
futures-channel = "0.3"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
h2 = { version = "0.3.3", optional = true }
http = "0.2"
http-body = "0.4"
httparse = "1.5.1"
httpdate = "1.0"
hyper = { version = "0.14", features = ["full"] }
itoa = "0.4.1"
log = "0.4"
pin-project-lite = "0.2.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
tower-service = "0.3"
tracing = { version = "0.1", default-features = false, features = ["std"] }
want = "0.3"
